kanc_pamoi/src/tests/sample_code/should_fail/single_file/type_check/wrong_number_of_arguments/type.k
type U {
    u: U,
}

type V(t: U) {}

let foo = V(U.u, U.u);
